# regadgets_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: regadgets_cppConfig.cmake.in
examples/: demo.cpp
include/regadgets/: regadgets.hpp
include/regadgets/bitwise/: bit_operations.hpp  data_conversion.hpp
include/regadgets/core/: types.hpp
include/regadgets/crypto/block/: aes.hpp  blowfish.hpp  des.hpp  rc5.hpp  sm4.hpp  tea.hpp  tripledes.hpp  xtea.hpp  xxtea.hpp
include/regadgets/crypto/stream/: chacha20.hpp  rc4.hpp  salsa20.hpp
include/regadgets/encoding/: base16.hpp  base2048.hpp  base32.hpp  base45.hpp  base58.hpp  base62.hpp  base64.hpp  base85.hpp  base91.hpp  base92.hpp
include/regadgets/hash/: checksum.hpp  hmac.hpp  md5.hpp  sha1.hpp  sha256.hpp  sha512.hpp
include/regadgets/math/: dct.hpp  matrix.hpp
include/regadgets/prng/: glibc_rand.hpp  mt19937.hpp  windows_rand.hpp
include/regadgets/reverse/: sbox.hpp
src/bitwise/: bit_operations.cpp  data_conversion.cpp
src/crypto/block/: aes.cpp  blowfish.cpp  common.hpp  des.cpp  rc5.cpp  sm4.cpp  tea.cpp  tripledes.cpp  xtea.cpp  xxtea.cpp
src/crypto/stream/: chacha20.cpp  rc4.cpp  salsa20.cpp
src/encoding/: base16.cpp  base2048.cpp  base32.cpp  base45.cpp  base58.cpp  base62.cpp  base64.cpp  base85.cpp  base91.cpp  base92.cpp
src/hash/: checksum.cpp  hmac.cpp  md5.cpp  sha1.cpp  sha256.cpp  sha512.cpp
src/math/: dct.cpp  matrix.cpp
src/prng/: glibc_rand.cpp  mt19937.cpp  windows_rand.cpp
src/reverse/: sbox.cpp
tests/: smoke_test.cpp
